Revision history for Types-SQL

{{$NEXT}}
  [Enhancements]
  - Types::SQL::Util translates the following types:
     * PositiveOrZeroInt
     * Num
     * PositiveOrZeroNum

v0.1.3    2017-12-20 12:53:52+00:00 Europe/London
  [Enhancements]
  - Types::SQL::Util translates a Bool into a boolean.

  [Documentation]
  - Updated using POD::Weaver.

  - README is now in Markdown.

  [Toolchain]
  - Updated dist.ini.

  - Extra tests are now part of Dist::Zilla build.

v0.1.2    2017-12-11 23:04:53+00:00 Europe/London
  [Other Changes]
  - Change how Dist::Zilla manages versions

0.1.1     2017-12-11 18:05:03+00:00 Europe/London
  [Other Changes]
  - Include more metadata in META.yml

  - Use Dist::Zilla to set module versions and update contributor
    metadata. This will also remove the dependency on version.

  - Move strictures to make Perl::Critic happy.

v0.1.0    2017-12-10 23:43:59+00:00 Europe/London
  [Documentation]
  - Fixed typo.

  - Bumped copyright year.

  [Other Changes]
  - No longer requires strictures module.

  - Ref::Uil::XS is recommended.

v0.0.3    2016-01-14 13:40:05+00:00 Europe/London
  [Enhancements]
  - Added support for datetime data types [GitHub #1].

  [Bug Fixes]
  - Fixed testing module version prerequisites.

  - Set minimum version of Type::Tiny to v0.44.

  [Other Changes]
  - Added more QA tests for developers.

  - Added META.json to the distribution.

  - Fixed type in test descriptions.

v0.0.2    2016-01-13 14:35:01+00:00 Europe/London
  [Enhancements]
  - Column information will be extracted from parent types when it is
    unavailable from the current type [GitHub #2].

    This allows one to declare a type based on existing types.

  [Other Changes]
  - Show the name of the type when returning an error for unsupported types.

v0.0.1    2016-01-13 10:59:10+00:00 Europe/London
  - First prototype published on GitHub.