@@ -6,6 +6,7 @@ Revision history for Types-SQL
      * PositiveOrZeroInt
      * Num
      * PositiveOrZeroNum
+     * InstanceOf['DateTime::Tiny']
 
 v0.1.3    2017-12-20 12:53:52+00:00 Europe/London
   [Enhancements]
